--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ div.relative {
 
 <br>
 
-	<p class="ex"><font size = 5>There are many explanations online for what Bitcoin is and how the underlying technology – the blockchain – works. At the same time, you see bold statements like “Bitcoin is worthless/a bubble/a Ponzi scheme...” or “Bitcoin is the future of money”. But there don’t seem to be good explanations of the economics of Bitcoin, and the blockchain technology. What I mean by this is things like:
+	<p class="ex"><font size = 5>There are many explanations online for what Bitcoin is and how the underlying technology – the blockchain – works. At the same time, people make bold statements like “Bitcoin is worthless/a bubble/a Ponzi scheme...” or “Bitcoin is the future of money”. But there don’t seem to be good explanations of the economics of Bitcoin, and the blockchain technology. What I mean by this is things like:
 <ul>
   <li>Where does Bitcoin’s value come from?</li>
   <li>Is Bitcoin a currency? A commodity?</li>
@@ -35,11 +35,11 @@ div.relative {
 </ul>
 </p>
 
-	<p class="ex"><font size = 5>Without having answers to questions like this, it’s hard to think about where Bitcoin could go, and to evaluate the strong beliefs people have. This guide is an attempt to sort out what exactly Bitcoin is from an economic point of view.</p>
+	<p class="ex"><font size = 5>Without having answers to questions like this, it’s hard to think about where Bitcoin could go, and to evaluate the strong beliefs people have about it. This guide is an attempt to provide a framework for thinking about the potential economic impacts of Bitcoin and the blockchain technology.</p>
 
-	<p class="ex"><font size = 5>This is not a technical guide to the technology behind Bitcoin, but there is a minimum you need to know to understand how it works and so Part 0 gives the necessary background. Parts 1 to 4 then address the main economic issues around Bitcoin. The last two Parts (5 and 6) discuss some potential applications of Bitcoin and the blockchain technology for businesses. These are the most speculative parts, but hopefully give a sense of where things are going.</p>
+	<p class="ex"><font size = 5>This is not a technical guide to the technology behind Bitcoin, but there is a minimum you need to know to understand how it works and so Part 0 gives the necessary background. Parts 1 to 4 then address the main economic issues around Bitcoin. The last two Parts (5 and 6) discuss some potential applications of Bitcoin and the blockchain technology for businesses. These are the most speculative parts, but give a sense of where things are going.</p>
 
-	<p class="ex"><font size = 5>Note: this isn't a tool for making predictions, for instance of where the price of Bitcoin will go. The aim is to understand why people are excited about Bitcoin and to provide a framework for thinking about the potential economic impacts of Bitcoin and the blockchain technology.</p>
+	<p class="ex"><font size = 5>Note: there is no investment advice here. The aim is to understand why people are excited about Bitcoin and to understand its potential economic impacts.</p>
 
 
 <br2>
