--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ div.relative {
 
 	<p class="ex"><font size = 5>Without having answers to questions like this, it’s hard to think about where Bitcoin could go, and to evaluate the strong beliefs people have about it. This guide is an attempt to provide a framework for thinking about the potential economic impacts of Bitcoin and the blockchain technology.</p>
 
-	<p class="ex"><font size = 5>This is not a technical guide to the technology behind Bitcoin, but there is a minimum you need to know to understand how it works and so Part 0 gives the necessary background. Parts 1 to 4 then address the main economic issues around Bitcoin. The last two Parts (5 and 6) discuss some potential applications of Bitcoin and the blockchain technology for businesses. These are the most speculative parts, but give a sense of where things are going.</p>
+	<p class="ex"><font size = 5>This is not a technical guide to the technology behind Bitcoin, but there is a minimum you need to know to follow the rest of the guide and so Part 0 gives the necessary background. Parts 1 to 4 then address the main economic issues around Bitcoin. The last two Parts (5 and 6) discuss some potential applications of Bitcoin and the blockchain technology for businesses. These are the most speculative parts, but give a sense of where things are going.</p>
 
-	<p class="ex"><font size = 5>Note: there is no investment advice here. The aim is to understand why people are excited about Bitcoin and to understand its potential economic impacts.</p>
+	<p class="ex"><font size = 5>Note: this is not an investment guide. The aim is to understand why people are excited about Bitcoin (and the blockchain technology) and what its potential economic impacts could be.</p>
 
 
 <br2>
