--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ div.relative {
 
 <p class="ex"><font size = 5>This is not a technical guide to the technology behind Bitcoin, but there is a minimum you need to know to follow the rest of the guide and so Part 0 gives the necessary background. Part 1 then addresses the main economic issues around Bitcoin, and is divided into four sections. Part 2 then discusses the blockchain technology, starting with general considerations before getting into how it might affect businesses.</p>
 
-<p class="ex"><font size = 5>This is also not an investment guide, and in general I'm not trying to make predictions. Instead the aim is to put together, in one place, a clear explanation of why people are excited about the potential economic impacts of Bitcoin and the blockchain. There is also a resources page with a link to useful websites and articles for doing your own research.</p>
+<p class="ex"><font size = 5>This is also not an investment guide, and in general I'm not trying to make predictions. Instead the aim is to put together, in one place, a clear explanation of why people are excited about the potential economic impacts of Bitcoin and the blockchain. There is also a resources page with a link to useful websites and articles for doing your own research. Please send comments and feedback to <a href="mailto:nick.lutsko@gmail.com">my email</a>.</p>
 
 
 <br2>
