Edited index to add blockchain stuff

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ div.relative {
   <li>Where does Bitcoin’s value come from?</li>
   <li>Is Bitcoin a currency? A commodity?</li>
   <li>What is useful about having a decentralized currency?</li>
-  <li>How can the blockchain affect businesses?</li>
+  <li>What are the general advantages of the blockchain technology?</li>
+  <li>How might the blockchain affect the way businesses are structured?</li>
 </ul>
 </p>
 
