--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 --- 
 layout: default
-title: The Economics of Bitcoin and the Blockchain
+title: Essays on Bitcoin and the Blockchain
 ---
 
   <style>  
