--- a/resources/index.html
+++ b/resources/index.html
@@ -5,6 +5,6 @@ title:  Resources
 		<div class="resources">
 			<h2>General Resources</h2>
 				
-			<h2>Specific Posts</h2>
+			<h2>Specific Articles</h2>
 				
 		</div>
