Added Twitter link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ div.relative {
 </ul>
 </p>
 
-<p class="ex"><font size = 5>The essays here try to wrestle with these questions. This is not a technical guide to Bitcoin and the blockchain, but there is a minimum you need to know and so the first essay summarizes this. It's also not an investment guide, and in general I'm not trying to make predictions. Instead the aim is to think clearly about why people are excited about the potential socio-economic impacts of Bitcoin and the blockchain. The essays are listed on the sidebar, and there is also a resources page with a link to useful websites and articles for doing your own research. Please send comments and feedback to <a href="mailto:nick.lutsko@gmail.com">my email</a> or to <a href="https://twitter.com/Fylo_104">my Twitter account</a>.
+<p class="ex"><font size = 5>The essays here try to wrestle with these questions. This is not a technical guide to Bitcoin and the blockchain, but there is a minimum you need to know and so the first essay summarizes this. It's also not an investment guide, and in general I'm not trying to make predictions. Instead the aim is to think clearly about why people are excited about the potential socio-economic impacts of Bitcoin and the blockchain. The essays are listed on the sidebar, and there is also a resources page with a link to useful websites and articles for doing your own research. Please send comments and feedback to my <a href="mailto:nick.lutsko@gmail.com"> email</a> or to my <a href="https://twitter.com/Fylo_104">Twitter account</a>.
 
 
 
