--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ div.relative {
 
 <br>
 
-<p class="ex"><font size = 5><i>"The future is already here — it's just not very evenly distributed."</i> -- William Gibson</p>
-<p class="ex"><font size = 5><i>"We wanted flying cars, instead we got 140 characters."</i> -- Peter Thiel</p>
-<p class="ex"><font size = 5><i>"For many ages to come the old Adam will be so strong in us that everybody will need to do some work if he is to be contented. We shall do more things for ourselves than is usual with the rich to-day, only too glad to have small duties and tasks and routines. But beyond this, we shall endeavour to spread the bread thin on the butter-to make what work there is still to be done to be as widely shared as possible. Three-hour shifts or a fifteen-hour week may put off the problem for a great while. For three hours a day is quite enough to satisfy the old Adam in most of us!"</i> -- John Maynard Keynes.</p>
-<p class="ex"><font size = 5><i>"Everything is what it is: liberty is liberty, not equality or fairness or justice or culture, or human happiness or a quiet conscience."</i> -- Isaiah Berlin.</p>
+<p class="ex"><font size = 5><i>"The future is already here — it's just not very evenly distributed."</i> — William Gibson</p>
+<p class="ex"><font size = 5><i>"We wanted flying cars, instead we got 140 characters."</i> — Peter Thiel</p>
+<p class="ex"><font size = 5><i>"For many ages to come the old Adam will be so strong in us that everybody will need to do some work if he is to be contented. We shall do more things for ourselves than is usual with the rich to-day, only too glad to have small duties and tasks and routines. But beyond this, we shall endeavour to spread the bread thin on the butter-to make what work there is still to be done to be as widely shared as possible. Three-hour shifts or a fifteen-hour week may put off the problem for a great while. For three hours a day is quite enough to satisfy the old Adam in most of us!"</i> — John Maynard Keynes.</p>
+<p class="ex"><font size = 5><i>"Everything is what it is: liberty is liberty, not equality or fairness or justice or culture, or human happiness or a quiet conscience."</i> — Isaiah Berlin.</p>
 
 <p class="ex"><font size = 5>Please send comments and feedback to my <a href="mailto:nick.lutsko@gmail.com"> email</a> or to my <a href="https://twitter.com/Fylo_104">Twitter account</a>.</p>
 
